--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -14,11 +14,6 @@
         <input type="hidden" id="Id" asp-for="Id" />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <label asp-for="Name" class="control-label">Name<em>&ensp;Optional</em></label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
-        <div class="form-group">
             <label asp-for="Date" class="control-label"></label>
             <input id="date" asp-for="Date" class="form-control"
                    onchange="window.SailScores.loadSeriesOptions()" />
@@ -28,23 +23,6 @@
             <label asp-for="Order" class="control-label">Order<em>&ensp;Used for sorting after the date</em></label>
             <input asp-for="Order" class="form-control" />
             <span asp-validation-for="Order" class="text-danger"></span>
-        </div>
-
-        <div class="form-group">
-            <label asp-for="State" class="control-label"></label>
-            <select id="fleetType" asp-for="State" class="form-control"
-                    asp-items="@(Html.GetEnumSelectList<SailScores.Api.Enumerations.RaceState>())"></select>
-            <span asp-validation-for="State" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Description" class="control-label">Description<em>&ensp;Optional</em></label>
-            <input asp-for="Description" class="form-control" />
-            <span asp-validation-for="Description" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="TrackingUrl" class="control-label">Tracking Url<em>&ensp;Optional</em></label>
-            <input asp-for="TrackingUrl" class="form-control" />
-            <span asp-validation-for="TrackingUrl" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="FleetId" class="control-label">Fleet<em>&ensp;Controls the list of available competitors</em></label>
@@ -72,6 +50,46 @@
             <span asp-validation-for="SeriesIds" class="text-danger"></span>
         </div>
 
+
+        <div id="advancedFields" role="tablist">
+            <div class="card">
+                <div class="card-header" role="tab" id="advancedHeading">
+                    <h5 class="mb-0">
+                        <a class="collapsed" data-toggle="collapse" href="#collapseAdvanced" aria-expanded="false" aria-controls="collapseAdvanced">
+                            Additional Fields
+                        </a>
+                    </h5>
+                </div>
+
+                <div id="collapseAdvanced" class="collapse" role="tabpanel" aria-labelledby="advancedHeading" data-parent="#advancedFields">
+                    <div class="card-body">
+                        <div class="form-group">
+                            <label asp-for="Name" class="control-label">Name<em>&ensp;Optional</em></label>
+                            <input asp-for="Name" class="form-control" />
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="State" class="control-label"></label>
+                            <select id="fleetType" asp-for="State" class="form-control"
+                                    asp-items="@(Html.GetEnumSelectList<SailScores.Api.Enumerations.RaceState>())"></select>
+                            <span asp-validation-for="State" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Description" class="control-label">Description<em>&ensp;Optional</em></label>
+                            <input asp-for="Description" class="form-control" />
+                            <span asp-validation-for="Description" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="TrackingUrl" class="control-label">Tracking Url<em>&ensp;Optional</em></label>
+                            <input asp-for="TrackingUrl" class="form-control" />
+                            <span asp-validation-for="TrackingUrl" class="text-danger"></span>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br />
         <div>
             Add result: <input id="newCompetitor" type="text" />
             <input type="button" value="Add Competitor" class="btn btn-primary" /><br />
@@ -206,5 +224,4 @@
         var scoreCodes = @Html.Raw(Json.Serialize(Model.ScoreCodeOptions));
         window.SailScores.init()
     </script>
-
 }
