--- a/SailScores.Web/custom.scss
+++ b/SailScores.Web/custom.scss
@@ -79,3 +79,20 @@ body {
     }
 }
 
+[data-toggle="collapse"]:after {
+    display: inline-block;
+    display: inline-block;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    content: "\f054";
+    transform: rotate(90deg);
+    transition: all linear 0.25s;
+}
+
+[data-toggle="collapse"].collapsed:after {
+    transform: rotate(0deg);
+}
