Add race result is at bottom
allows to see results just entered.

--- a/SailScores.Web/Views/Admin/_BoatClassList.cshtml
+++ b/SailScores.Web/Views/Admin/_BoatClassList.cshtml
@@ -2,9 +2,11 @@
 
 <div class="card">
     <div class="card-header" id="classesHeading">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseClasses" aria-expanded="false" aria-controls="collapseClasses">
-            <h4 id="classes">Classes</h4>
-        </button>
+        <h5>
+            <span id="classes" class="btn-link collapsed" data-toggle="collapse" data-target="#collapseClasses" aria-expanded="false" aria-controls="collapseClasses">
+                Classes
+            </span>
+        </h5>
     </div>
     <div id="collapseClasses" class="collapse" aria-labelledby="classesHeading" data-parent="#accordion">
         <div class="card-body">
