--- a/SailScores.Web/Views/Admin/_CompetitorList.cshtml
+++ b/SailScores.Web/Views/Admin/_CompetitorList.cshtml
@@ -2,9 +2,11 @@
 
 <div class="card">
     <div class="card-header" id="competitorsHeading">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseCompetitors" aria-expanded="false" aria-controls="collapseCompetitors">
-            <h4 id="competitors">Competitors</h4>
-        </button>
+        <h5>
+            <span id="competitors" class="btn-link collapsed" data-toggle="collapse" data-target="#collapseCompetitors" aria-expanded="false" aria-controls="collapseCompetitors">
+                Competitors
+            </span>
+        </h5>
     </div>
     <div id="collapseCompetitors" class="collapse" aria-labelledby="competitorsHeading" data-parent="#accordion">
         <div class="card-body">
