--- a/SailScores.Web/Views/Admin/_FleetList.cshtml
+++ b/SailScores.Web/Views/Admin/_FleetList.cshtml
@@ -2,9 +2,11 @@
 
     <div class="card">
         <div class="card-header" id="fleetsHeading">
-            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFleets" aria-expanded="false" aria-controls="collapseFleets">
-                <h4 id="fleets">Fleets</h4>
-            </button>
+            <h5>
+                <span id="fleets" class="btn-link collapsed" data-toggle="collapse" data-target="#collapseFleets" aria-expanded="false" aria-controls="collapseFleets">
+                    Fleets
+                </span>
+            </h5>
         </div>
         <div id="collapseFleets" class="collapse" aria-labelledby="fleetsHeading" data-parent="#accordion">
             <div class="card-body">
