--- a/SailScores.Web/Views/Admin/_SeasonList.cshtml
+++ b/SailScores.Web/Views/Admin/_SeasonList.cshtml
@@ -2,9 +2,11 @@
 
 <div class="card">
     <div class="card-header" id="seasonsHeading">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSeasons" aria-expanded="false" aria-controls="collapseSeasons">
-            <h4 id="seasons">Seasons</h4>
-        </button>
+        <h5>
+            <span id="seasons" class="btn-link collapsed" data-toggle="collapse" data-target="#collapseSeasons" aria-expanded="false" aria-controls="collapseSeasons">
+                Seasons
+            </span>
+        </h5>
     </div>
     <div id="collapseSeasons" class="collapse" aria-labelledby="seasonsHeading" data-parent="#accordion">
         <div class="card-body">
