--- a/SailScores.Web/Views/Admin/_SeriesList.cshtml
+++ b/SailScores.Web/Views/Admin/_SeriesList.cshtml
@@ -2,9 +2,11 @@
 
 <div class="card">
     <div class="card-header" id="seriesHeading">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSeries" aria-expanded="false" aria-controls="collapseSeries">
-            <h4 id="series">Series</h4>
-        </button>
+        <h5>
+            <span id="series" class="btn-link collapsed" data-toggle="collapse" data-target="#collapseSeries" aria-expanded="false" aria-controls="collapseSeries">
+                Series
+            </span>
+        </h5>
     </div>
     <div id="collapseSeries" class="collapse" aria-labelledby="seriesHeading" data-parent="#accordion">
             <div class="card-body">
