--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -21,7 +21,7 @@
         </div>
         <div class="form-group">
             <label asp-for="Order" class="control-label">Order<em>&ensp;Used for sorting after the date</em></label>
-            <input asp-for="Order" class="form-control" />
+            <input asp-for="Order" class="form-control" type="number" />
             <span asp-validation-for="Order" class="text-danger"></span>
         </div>
         <div class="form-group">
@@ -49,7 +49,6 @@
             </select>
             <span asp-validation-for="SeriesIds" class="text-danger"></span>
         </div>
-
 
         <div id="advancedFields" role="tablist">
             <div class="card">
@@ -90,80 +89,88 @@
             </div>
         </div>
         <br />
-        <div>
-            Add result: <input id="newCompetitor" type="text" />
-            <input type="button" value="Add Competitor" class="btn btn-primary" /><br />
-        </div>
-        <ul class="list-group col-12" id="results">
-            <li class="list-group-item" id="competitorTemplate" style="display: none;">
-                <div class="d-flex w-100 flex-wrap">
-                    <div>
-                        <span class="badge badge-secondary badge-pill race-place"></span>
-                    </div>
-                    <div>
-                        <span class="sail-number"></span>
-                    </div>
-                    <div>
-                        <span class="competitor-name h5"></span>
-                    </div>
-                    <div class="float-right ml-auto d-flex">
-                        <div>
-                            <select class="select-code form-control form-control-sm" onchange="window.SailScores.calculatePlaces()">
-                                <option value="No Code">No Code</option>
-                                @foreach (var code in Model.ScoreCodeOptions)
-                                {
-                                    <option value="@code.Name">@code.Name: @code.Description.Left(40)</option>
-                                }
-                            </select>
-                        </div>
-                        <button class="btn btn-light" type="button" onclick="window.SailScores.moveUp()"><span class="fa fa-angle-up"></span></button>
-                        <button class="btn btn-light" type="button" onclick="window.SailScores.moveDown()"><span class="fa fa-angle-down"></span></button>
-                        &ensp;
-                        <button class="btn btn-light delete-button" type="button" data-toggle="modal"
-                                data-target="#deleteConfirm"
-                                onclick="window.SailScores.confirmDelete()">
-                            <span class="far fa-trash-alt text-danger"></span>
-                        </button>
-                    </div>
-                </div>
-            </li>
-            @foreach (var score in Model.Scores)
-            {
-                <li id="@score.CompetitorId" class="list-group-item"
-                    data-competitorid="@score.CompetitorId" data-originalScore="@score.Place">
-                    <div class="d-flex w-100 flex-wrap">
-                        <div>
-                            <span class="badge badge-secondary badge-pill race-place"></span>
-                        </div>
-                        <div>
-                            <span class="sail-number">@score.Competitor.SailNumber</span>
-                        </div>
-                        <div>
-                            <span class="competitor-name h5">@score.Competitor.Name</span>
-                        </div>
-                        <div class="float-right ml-auto d-flex">
+        <div class="row">
+            <div class="col-12 col-lg-8 pb-3">
+                <ul class="list-group" id="results">
+                    <li class="list-group-item" id="competitorTemplate" style="display: none;">
+                        <div class="d-flex w-100 flex-wrap">
                             <div>
-                                <select class="select-code form-control form-control-sm" onchange="window.SailScores.calculatePlaces()">
-                                    <option value="No Code">No Code</option>
-                                    @foreach (var code in Model.ScoreCodeOptions)
-                                    {
-                                        <option value="@code.Name" selected="@(score.Code == code.Name)">@code.Name: @code.Description.Left(40)</option>
-                                    }
-                                </select>
+                                <span class="badge badge-secondary badge-pill race-place"></span>
                             </div>
-                            <button class="btn btn-light" type="button" onclick="window.SailScores.moveUp()"><span class="fa fa-angle-up"></span></button>
-                            <button class="btn btn-light" type="button" onclick="window.SailScores.moveDown()"><span class="fa fa-angle-down"></span></button>
-                            &ensp;
-                            <button class="btn btn-light delete-button" type="button" data-toggle="modal"
-                                    data-target="#deleteConfirm" data-competitorid="@score.CompetitorId"
-                                    onclick="window.SailScores.confirmDelete()">
-                                <span class="far fa-trash-alt text-danger"></span>
-                            </button>
+                            <div>
+                                <span class="sail-number"></span>
+                            </div>
+                            <div>
+                                <span class="competitor-name h5"></span>
+                            </div>
+                            <div class="float-right ml-auto d-flex">
+                                <div>
+                                    <select class="select-code form-control form-control-sm" onchange="window.SailScores.calculatePlaces()">
+                                        <option value="No Code">No Code</option>
+                                        @foreach (var code in Model.ScoreCodeOptions)
+                                        {
+                                            <option value="@code.Name">@code.Name: @code.Description.Left(40)</option>
+                                        }
+                                    </select>
+                                </div>
+                                <button class="btn btn-light" type="button" onclick="window.SailScores.moveUp()"><span class="fa fa-angle-up"></span></button>
+                                <button class="btn btn-light" type="button" onclick="window.SailScores.moveDown()"><span class="fa fa-angle-down"></span></button>
+                                &ensp;
+                                <button class="btn btn-light delete-button" type="button" data-toggle="modal"
+                                        data-target="#deleteConfirm"
+                                        onclick="window.SailScores.confirmDelete()">
+                                    <span class="far fa-trash-alt text-danger"></span>
+                                </button>
+                            </div>
                         </div>
-                    </div>
-                </li>
-            }
-        </ul>
+                    </li>
+                    @foreach (var score in Model.Scores)
+                    {
+                        <li id="@score.CompetitorId" class="list-group-item"
+                            data-competitorid="@score.CompetitorId" data-originalScore="@score.Place">
+                            <div class="d-flex w-100 flex-wrap">
+                                <div>
+                                    <span class="badge badge-secondary badge-pill race-place"></span>
+                                </div>
+                                <div>
+                                    <span class="sail-number">@score.Competitor.SailNumber</span>
+                                </div>
+                                <div>
+                                    <span class="competitor-name h5">@score.Competitor.Name</span>
+                                </div>
+                                <div class="float-right ml-auto d-flex">
+                                    <div>
+                                        <select class="select-code form-control form-control-sm" onchange="window.SailScores.calculatePlaces()">
+                                            <option value="No Code">No Code</option>
+                                            @foreach (var code in Model.ScoreCodeOptions)
+                                            {
+                                                <option value="@code.Name" selected="@(score.Code == code.Name)">@code.Name: @code.Description.Left(40)</option>
+                                            }
+                                        </select>
+                                    </div>
+                                    <button class="btn btn-light" type="button" onclick="window.SailScores.moveUp()"><span class="fa fa-angle-up"></span></button>
+                                    <button class="btn btn-light" type="button" onclick="window.SailScores.moveDown()"><span class="fa fa-angle-down"></span></button>
+                                    &ensp;
+                                    <button class="btn btn-light delete-button" type="button" data-toggle="modal"
+                                            data-target="#deleteConfirm" data-competitorid="@score.CompetitorId"
+                                            onclick="window.SailScores.confirmDelete()">
+                                        <span class="far fa-trash-alt text-danger"></span>
+                                    </button>
+                                </div>
+                            </div>
+                        </li>
+                    }
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-lg-4 mb-3">
+                <div class="form-group">
+                    <label class="contorl-label h4">Add result:</label>
+                    <input id="newCompetitor" type="text" class="form-control" />
+                </div>
+            </div>
+        </div>
         <hr />
         <div class="row">
             <span id="submitDisabledMessage" visble>The Save function is still loading...</span>
@@ -187,7 +194,6 @@
             </div>
         </div>
     </form>
-    <hr />
 </div>
 
 <div class="modal fade" id="deleteConfirm" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmLabel" aria-hidden="true">
