--- a/SailScores.Web/Views/Admin/Index.cshtml
+++ b/SailScores.Web/Views/Admin/Index.cshtml
@@ -12,7 +12,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#classes">Classes</a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link" href="#fleets">Fleets</a>
                 </li>
@@ -92,6 +91,8 @@
     @await Html.PartialAsync("_SeriesList", Model.Series)
     @await Html.PartialAsync("_CompetitorList", Model.Competitors)
     @await Html.PartialAsync("_RaceList", Model.Races)
+    @await Html.PartialAsync("_ScoringSystems", Model.ScoringSystems)
+
 </div>
 
 @section Scripts {
