News and release notes added

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -6,10 +6,41 @@
     @ViewData["Title"]
 </h3>
 <h3>
+    June 7th, 2019 Update
+</h3>
+<h5>Release Notes</h5>
+<p>
+    Enhancesments to the race editing page are getting rolled out today:
+    <ul>
+        <li>The page automatically scrolls to show the last entered result. (This
+        required that the Add Result field get moved toward the bottom of the page.) </li>
+        <li>A few weeks ago we added a field to track scheduled, raced and abandoned
+        races. Scheduled and abandoned races don't show up in series views on small
+        devices and aren't used for scoring.</li>
+        <li>The Name and Description fields have been moved to Additional Fields section
+        that is collapse by default.</li>
+        <li>The format of the result list has been improved, including more details 
+        score codes.</li>
+    </ul>
+    These changes should make entering results on a phone a much better experience. The changes came
+    about after using this with great success for the last several weeks at Lake Harriet.
+</p>
+<h5>Other News</h5>
+<p>We're trying to consolidate our issues lists with the SailScores code at
+    <a href="https://github.com/jbfraser1/SailScores/issues" target="_blank">GitHub.</a> Some
+    of the issues have a "Help wanted" tag, where we'd love to hear more input from potential users.</p>
+<p>The big effort of making the scoring systems customizable through a user interface has started.
+    Initially this will focus on supporting low-point scoring, and allowing for customizable
+    discard patterns and score code values, but still making sure a single race can be used in 
+    multiple series.</p>
+<br />
+<h3>
     February 25th, 2019
 </h3>
-<p>SailScores.com is kinda live. There are still features to be added, but the basics are
+<p>
+    SailScores.com is kinda live. There are still features to be added, but the basics are
     working. In the next few months there will be plenty of testing and tweaks. Hopefully
     a few new features as well. If you are interested in helping out with the testing, please
     <a href="mailto:info@sailscores.com">reach out</a> and let us know.
 </p>
+
