--- a/SailScores.Web/Views/ScoringSystem/Edit.cshtml
+++ b/SailScores.Web/Views/ScoringSystem/Edit.cshtml
@@ -29,7 +29,7 @@
                 <input type="submit" value="Save" class="btn btn-primary" />
                 <a asp-controller="Admin"
                    asp-action="Index"
-                   asp-fragment="seasons"
+                   asp-fragment="scoringsystems"
                    class="btn btn-outline-primary">Cancel</a>
             </div>
         </form>
