Fixed admin page accordion on iOS

--- a/SailScores.Web/Views/Admin/_BoatClassList.cshtml
+++ b/SailScores.Web/Views/Admin/_BoatClassList.cshtml
@@ -3,9 +3,9 @@
 <div class="card">
     <div class="card-header" id="classesHeading">
         <h5>
-            <span id="classes" class="btn-link collapsed" data-toggle="collapse" data-target="#collapseClasses" aria-expanded="false" aria-controls="collapseClasses">
+            <a class="collapsed" id="classes" data-toggle="collapse" href="#collapseClasses" aria-expanded="false" aria-controls="collapseClasses">
                 Classes
-            </span>
+            </a>
         </h5>
     </div>
     <div id="collapseClasses" class="collapse" aria-labelledby="classesHeading" data-parent="#accordion">
