--- a/SailScores.Web/Views/Admin/_CompetitorList.cshtml
+++ b/SailScores.Web/Views/Admin/_CompetitorList.cshtml
@@ -3,9 +3,9 @@
 <div class="card">
     <div class="card-header" id="competitorsHeading">
         <h5>
-            <span id="competitors" class="btn-link collapsed" data-toggle="collapse" data-target="#collapseCompetitors" aria-expanded="false" aria-controls="collapseCompetitors">
+            <a class="collapsed" id="competitors" data-toggle="collapse" href="#collapseCompetitors" aria-expanded="false" aria-controls="collapseCompetitors">
                 Competitors
-            </span>
+            </a>
         </h5>
     </div>
     <div id="collapseCompetitors" class="collapse" aria-labelledby="competitorsHeading" data-parent="#accordion">
