--- a/SailScores.Web/Views/Admin/_FleetList.cshtml
+++ b/SailScores.Web/Views/Admin/_FleetList.cshtml
@@ -3,9 +3,9 @@
     <div class="card">
         <div class="card-header" id="fleetsHeading">
             <h5>
-                <span id="fleets" class="btn-link collapsed" data-toggle="collapse" data-target="#collapseFleets" aria-expanded="false" aria-controls="collapseFleets">
+                <a id="fleets" class="collapsed" data-toggle="collapse" href="#collapseFleets" aria-expanded="false" aria-controls="collapseFleets">
                     Fleets
-                </span>
+                </a>
             </h5>
         </div>
         <div id="collapseFleets" class="collapse" aria-labelledby="fleetsHeading" data-parent="#accordion">
