--- a/SailScores.Web/Views/Admin/_RaceList.cshtml
+++ b/SailScores.Web/Views/Admin/_RaceList.cshtml
@@ -2,9 +2,9 @@
 <div class="card">
     <div class="card-header" id="racesHeading">
         <h5>
-            <span id="races" class="btn-link collapsed" data-toggle="collapse" data-target="#collapseRaces" aria-expanded="false" aria-controls="collapseRaces">
+            <a id="races" class="collapsed" data-toggle="collapse" href="#collapseRaces" aria-expanded="false" aria-controls="collapseRaces">
                 Races
-            </span>
+            </a>
         </h5>
     </div>
     <div id="collapseRaces" class="collapse" aria-labelledby="racesHeading" data-parent="#accordion">
