--- a/SailScores.Web/Views/Admin/_SeasonList.cshtml
+++ b/SailScores.Web/Views/Admin/_SeasonList.cshtml
@@ -3,9 +3,9 @@
 <div class="card">
     <div class="card-header" id="seasonsHeading">
         <h5>
-            <span id="seasons" class="btn-link collapsed" data-toggle="collapse" data-target="#collapseSeasons" aria-expanded="false" aria-controls="collapseSeasons">
+            <a id="seasons" class="collapsed" data-toggle="collapse" href="#collapseSeasons" aria-expanded="false" aria-controls="collapseSeasons">
                 Seasons
-            </span>
+            </a>
         </h5>
     </div>
     <div id="collapseSeasons" class="collapse" aria-labelledby="seasonsHeading" data-parent="#accordion">
