--- a/SailScores.Web/Views/Admin/_SeriesList.cshtml
+++ b/SailScores.Web/Views/Admin/_SeriesList.cshtml
@@ -3,9 +3,9 @@
 <div class="card">
     <div class="card-header" id="seriesHeading">
         <h5>
-            <span id="series" class="btn-link collapsed" data-toggle="collapse" data-target="#collapseSeries" aria-expanded="false" aria-controls="collapseSeries">
+            <a id="series" class="collapsed" data-toggle="collapse" href="#collapseSeries" aria-expanded="false" aria-controls="collapseSeries">
                 Series
-            </span>
+            </a>
         </h5>
     </div>
     <div id="collapseSeries" class="collapse" aria-labelledby="seriesHeading" data-parent="#accordion">
