--- a/SailScores.Web/Views/Admin/_ScoringSystems.cshtml
+++ b/SailScores.Web/Views/Admin/_ScoringSystems.cshtml
@@ -3,10 +3,10 @@
 <div class="card">
     <div class="card-header" id="scoringHeading">
         <h5>
-            <span id="scoring" class="btn-link collapsed" data-toggle="collapse" data-target="#collapseScoring"
+            <a id="scoring" class="collapsed" data-toggle="collapse" href="#collapseScoring"
                   aria-expanded="false" aria-controls="collapseScoring">
                 Scoring Systems
-            </span>
+            </a>
             <span class="text-danger">&ensp;<span class="small"><em>Advanced</em></span></span>
         </h5>
     </div>
