Date added to views for series

--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -131,3 +131,7 @@
         </tbody>
     </table>
 </div>
+@if(Model.Item.UpdatedDate.HasValue)
+{
+<i>Last updated @(Model.Item.UpdatedDate.Value.ToString("f")) UTC</i>
+}
