--- a/SailScores.Web/Views/Series/Index.cshtml
+++ b/SailScores.Web/Views/Series/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using SailScores.Web.Models.SailScores;
+@using SailScores.Web.Extensions;
 @model ClubCollectionViewModel<SeriesSummary>
 
 @{
@@ -38,14 +39,19 @@
                 <tr>
                     <td>
                         <a href="~/@Model.ClubInitials/@series.Season.Name/@series.Name">
-                            @Html.DisplayFor(modelItem => series.Name) (@(series.Races?.Count.ToString() ?? "No") Races)
+                            @Html.DisplayFor(modelItem => series.Name)
                         </a>
+                        (@(series.Races?.Count.ToString() ?? "No") Races)
                     </td>
                     <td>
                         @series.DateString
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => series.Description)
+                        @if (series.UpdatedDate.HasValue)
+                        {
+                        <span class="d-none d-md-table-cell"><i>Updated @(series.UpdatedDate.Value.ToString("d"))</i></span>
+                        }
                     </td>
                 </tr>
             }
